# step-fingerprint

./: README.md  pyproject.toml
examples/: LESSONS_LEARNED.md  PROMPT.md  conftest.py  crank.stl  crank_PROMPT.md  peghead7mm.step  peghead_design.md  peghead_no_fillets.step  peghead_procedural.py  peghead_procedural.step  peghead_simple.py  peghead_simple.step  peghead_with_fillets.step  test_crank.py  test_peghead.py
src/cad_fingerprint/: __init__.py  analyze.py  cli.py  compare.py  fingerprint.py  generate.py
src/step_fingerprint/: __init__.py  analyze.py  cli.py  fingerprint.py  generate.py
tests/: test_examples.py  test_integration.py  test_mesh_math.py
