[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cad-fingerprint"
version = "0.2.0"
description = "Generate geometric fingerprint tests from STEP and STL files for reverse-engineering into build123d"
requires-python = ">=3.10"
dependencies = [
    "build123d>=0.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
cad-fingerprint = "cad_fingerprint.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
